--- a/fundamentos-react/src/components/layout/Card.css
+++ b/fundamentos-react/src/components/layout/Card.css
@@ -2,14 +2,16 @@ body{
     background-color: rgb(92, 91, 91);
 }
 .Card{
-    background-color: red;
     border-radius: 10px;
     overflow: hidden;
-    border: 3px solid red;
+    border: 3px solid;
     margin: 20px 0;
+    display: flex;
+    flex-direction: column;
+    min-width: 500px;
+    max-width: 500px;
 }
 .Card .title{
-    background-color: red;
     padding: 5px 0;
     display: flex;
     justify-content: center;
@@ -18,4 +20,5 @@ body{
     background-color: #fff;
     color: #000;
     padding: 10px;
+    flex: 1;
 }
